--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,32 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i");
+/* SIZES */
+/* COLORS */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   border: 0;
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 30px; }
+  font-size: 20px;
+  color: #333333; }
+
+form * {
+  display: block;
+  width: 100%; }
+
+label, button {
+  margin-top: 20px; }
+
+input, select, textarea, button {
+  border-radius: 10px;
+  padding: 10px;
+  background: #f7f7f7; }
+
+button {
+  background: #333333;
+  color: #f7f7f7; }
+
+#wrapper {
+  margin: auto;
+  padding: 20px;
+  max-width: 480px; }
